Backporting to 1.20.1